--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,29 +6,137 @@ const itemlinks = [
 	{
 		href: '/asset/building/',
 		title: 'Building',
-		description: 'The basics of Building asset creation',
+		description: 'The basics of building asset creation',
 		svgname: 'icon_Building',
 	},
 	{
-		href: '/asset/building/',
+		href: '/asset/prop/',
 		title: 'Prop',
-		description: 'The basics of Prop asset creation',
+		description: 'The basics of prop asset creation',
 		svgname: 'icon_Prop',
+	},
+	{
+		href: '/asset/tree/',
+		title: 'Tree',
+		description: 'The basics of tree asset creation',
+		svgname: 'icon_Tree',
+	},
+	{
+		href: '/asset/vehicle/',
+		title: 'Vehicle',
+		description: 'The basics of vehicle asset creation',
+		svgname: 'icon_Vehicle',
+	},
+	{
+		href: '/asset/citizen/',
+		title: 'Citizen',
+		description: 'The basics of citizen asset creation',
+		svgname: 'icon_Citizen',
+	},
+	{
+		href: '/asset/network/',
+		title: 'Network',
+		description: 'The basics of road and other network asset creation',
+		svgname: 'icon_Network',
+	},
+	{
+		href: '/theme/',
+		title: 'Theme',
+		description: 'Textures, colors and other properties of map themes',
+		svgname: 'icon_Theme',
+	},
+	{
+		href: '/lut/',
+		title: 'LUT',
+		description: 'Look-up tables for color correction and adjustments',
+		svgname: 'icon_LUT',
+	},
+	{
+		href: '/noworkshop/',
+		title: 'No Workshop',
+		description: 'Disable workshop content and use local mods',
+		svgname: 'icon_NoWorkshop',
+	},
+	{
+		href: '/normal-maps/',
+		title: 'Normal Maps',
+		description: 'Generate correct normal maps and solve common issues',
+		svgname: 'icon_Normal',
+	},
+	{
+		href: '/scale/',
+		title: 'Scale',
+		description: 'The size of cells, tiles, roads, and more',
+		svgname: 'icon_Scale',
+	},
+	{
+		href: '/scripts/',
+		title: 'Scripts',
+		description: 'Useful scripts for changing asset variables and more',
+		svgname: 'icon_Scripts',
+	},
+	{
+		href: '/shader/decal/',
+		title: 'Decal Shader',
+		description: 'Props which project textures onto the terrain',
+		svgname: 'icon_Decal',
+	},
+	{
+		href: '/shader/rotors/',
+		title: 'Rotors Shader Props & Buildings',
+		description: 'Supports semi-transparency and is often used for glass',
+		svgname: 'icon_Rotors',
+	},
+	{
+		href: '/shader/rotors-vehicle/',
+		title: 'Rotors Shader Vehicle Glass',
+		description: 'Static rotors shader sub-meshes for windows or lights',
+		svgname: 'icon_Rotors_Car',
+	},
+	{
+		href: '/shader/rotors-propellers/',
+		title: 'Rotors Shader Propellers',
+		description: 'Spinning rotors shader sub-meshes for blimp, plane, or helicopter propellers',
+		svgname: 'icon_Rotors_Propeller',
+	},
+	{
+		href: '/shader/animuv/',
+		title: 'AnimUV Shader',
+		description: 'Scrolling or multi-frame animations for props, buildings, or vehicles',
+		svgname: 'icon_AnimUV',
+	},
+	{
+		href: '/shader/flag/',
+		title: 'Flag Shader',
+		description: 'Props which have wind movement such as flags or cloths',
+		svgname: 'icon_Flag',
+	},
+	{
+		href: '/mod/ploppable-asphalt/',
+		title: 'Ploppable Asphalt +',
+		description: 'Props which display map theme textures such as asphalt, pavement, or others',
+		svgname: 'icon_Ploppable',
+	},
+	{
+		href: '/mod/additive-shader/',
+		title: 'Additive Shader',
+		description: 'Props or vehicle sub-meshes which use a glowing particle shader',
+		svgname: 'icon_Additive',
 	},
 ];
 ---
 
 <MainLayout>
-	<section class="py-4 sm:ml-64">
-		<h1 class="text-2xl font-bold text-title">Cities: Skylines I</h1>
+	<section class="py-12 sm:ml-64">
+		<h1 class="text-2xl font-bold text-title mb-6">Cities: Skylines I</h1>
 
-		<div class="grid grid-cols-4 p-4 border-2 border-gray-700 border-dashed rounded-lg">
+		<div class="grid grid-cols-2 lg:grid-cols-4 border-2 border-hit-gray-950 rounded-lg">
 			{
 				itemlinks.map((item) => (
-					<a href={item.href} class="inline-flex flex-col items-center justify-start text-center ">
-						<Icon class="w-24 h-24 mb-4" name={item.svgname} />
-						<span>{item.title}</span>
-						<p class="mt-4">{item.description}</p>
+					<a href={item.href} class="inline-flex flex-col group p-8 items-center justify-start text-center mb-4">
+						<Icon class="w-24 h-24 mb-4 fill-hit-gray-300 group-hover:fill-hoverlink" name={item.svgname} />
+						<span class="text-[1.25rem] leading-[1.75rem] text-hit-gray-200 group-hover:text-hoverlink">{item.title}</span>
+						<p class="mt-4 text-[1rem] leading-[1.25rem] text-hit-gray-400 group-hover:text-hoverlink">{item.description}</p>
 					</a>
 				))
 			}
