--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -114,7 +114,7 @@ const sidebarItems = [
 			{
 				sidebarItems.map(({ category, items }) => (
 					<div class="mt-6">
-						<h2 class="text-hit-gray-500 text-[.875rem] leading-[1.75rem] mb-2">{category}</h2>
+						<span class="text-hit-gray-500 text-[.875rem] leading-[1.75rem] mb-2">{category}</span>
 						<ul>
 							{items.map((item) => (
 								<li class="mt-1">
