--- a/src/pages/asset/network.astro
+++ b/src/pages/asset/network.astro
@@ -7,6 +7,7 @@ import TableOfContents from '../../components/TableOfContents.astro';
 <MainLayout>
 	<TableOfContents />
 	<section class="py-12 sm:ml-64 xl:mr-64 text-lg text-hit-gray-500">
+		<h1 id="overview" class="border-b-4 border-hit-gray-600 pb-8 text-4xl font-bold text-hit-gray-400">Network Asset Creation</h1>
 		<div class="content">
 			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="about">About</h2>
 			<p class="mt-4">Networks consist of nodes and segments, they are used for roads, tracks, canals, walls, fences, powerlines etc.</p>
@@ -472,7 +473,7 @@ import TableOfContents from '../../components/TableOfContents.astro';
 			<p class="mt-4">Active for a dead end - where the road ends.</p>
 			<h4 class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12" id="segment-flag-bend">Bend</h4>
 			<p class="mt-4">
-				Used to display a bend segment mesh where a <Link classes="" href="/asset/network/#node-flag-bend" text="Bend node" theme="internallink" /> is.
+				Used to display a bend segment mesh where a <Link classes="" href="/asset/network/node-flag-bend" text="Bend node" theme="internallink" /> is.
 			</p>
 			<h4 class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12" id="segment-flag-waitingpath">WaitingPath</h4>
 			<p class="mt-4">
@@ -514,7 +515,7 @@ import TableOfContents from '../../components/TableOfContents.astro';
 			<p class="mt-4">
 				Used to display an asymmetric segment mesh where an <Link
 					classes=""
-					href="/asset/network/#node-flag-asymforward"
+					href="/asset/network/node-flag-asymforward"
 					text="AsymForward node"
 					theme="internallink"
 				/> is.
@@ -523,7 +524,7 @@ import TableOfContents from '../../components/TableOfContents.astro';
 			<p class="mt-4">
 				Used to display an asymmetric segment mesh where an <Link
 					classes=""
-					href="/asset/network/#node-flag-asymbackward"
+					href="/asset/network/node-flag-asymbackward"
 					text="AsymBackward node"
 					theme="internallink"
 				/> is.
