--- a/src/pages/lut.astro
+++ b/src/pages/lut.astro
@@ -7,21 +7,22 @@ import TableOfContents from '../components/TableOfContents.astro';
 <MainLayout>
 	<TableOfContents />
 	<section class="py-12 sm:ml-64 xl:mr-64 text-lg text-hit-gray-500">
+		<h1 id="overview" class="border-b-4 border-hit-gray-600 pb-8 text-4xl font-bold text-hit-gray-400">LUT</h1>
 		<div class="content">
 			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="about">About</h2><div
 				class="flex flex-col lg:flex-row gap-6 mt-4"
 			>
 				<div class="lg:w-2/3">
-					<p class="mt-4">LUT stands for look-up table. It's a map of colors which allows applying color correction and adjustments to the image.</p>
+					<p>LUT stands for look-up table. It's a map of colors which allows applying color correction and adjustments to the image.</p>
 				</div><div class="lg:w-1/3">
-					<a href="https://i.imgur.com/DBtIo5s.jpg" target="_blank"><img src="https://i.imgur.com/DBtIo5s.jpg" /></a>
-					<p class="explanation">
-						Comparison between the default LUT without any adjustments and a finished modified LUT. Using
-						<Link href="https://steamcommunity.com/sharedfiles/filedetails/?id=1209581656" theme="externallink" text="Relight" classes="" /> with default /
-						recommended settings.
+					<a href="https://i.imgur.com/DBtIo5s.jpg" target="null"><img src="https://i.imgur.com/DBtIo5s.jpg" /></a><p class="explanation">
+						Comparison between the default LUT without any adjustments and a finished modified LUT. Using <a
+							href="https://steamcommunity.com/sharedfiles/filedetails/?id=1209581656">Relight</a
+						> with default/recommended settings.
 					</p>
 				</div>
-			</div><h4 class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12" id="folder">Folder</h4>
+			</div>
+			<h4 class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12" id="folder">Folder</h4>
 			<p class="mt-4">The folder where you should put the LUT png is located here:</p>
 			<p class="mt-4"><span class="path">%LocalAppData%\Colossal Order\Cities_Skylines\Addons\ColorCorrections</span></p>
 			<p class="mt-4">
@@ -32,7 +33,7 @@ import TableOfContents from '../components/TableOfContents.astro';
 			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="creation">Creation</h2>
 			<h3 class="mt-16 text-2xl text-hit-gray-400 font-semibold border-b border-hit-gray-500 pb-4" id="default-lut">Default LUT</h3>
 			<p class="mt-4">To create an LUT, you first need to download the default LUT which has no adjustments.</p>
-			<div class="content-download"></div>
+			<div class="content-download mt-4"><Link classes="" href="https://i.imgur.com/cgjH2nC.png" text="Download" theme="downloadbutton" /></div>
 			<h3 class="mt-16 text-2xl text-hit-gray-400 font-semibold border-b border-hit-gray-500 pb-4" id="adjustments">Adjustments</h3>
 			<p class="mt-4">
 				You should only apply per-pixel color adjustments, that means you cannot apply effects such as blur, sharpening, clarity, highlights/shadows, and many
@@ -49,7 +50,9 @@ import TableOfContents from '../components/TableOfContents.astro';
 			</p>
 			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="example">Example</h2>
 			<p class="mt-4">Download a Photoshop file of an example LUT with various adjustments. Must be exported as 8 bits/channel png.</p>
-			<div class="content-download"></div>
+			<div class="content-download mt-4">
+				<Link classes="" href="https://drive.google.com/open?id=1JuKMQ07VkDs_ZMVoFyvaRhowQ7N-vMrt" text="Download" theme="downloadbutton" />
+			</div>
 		</div>
 	</section>
 </MainLayout>
