added more pages

--- a/src/pages/asset/network.astro
+++ b/src/pages/asset/network.astro
@@ -473,7 +473,7 @@ import TableOfContents from '../../components/TableOfContents.astro';
 			<p class="mt-4">Active for a dead end - where the road ends.</p>
 			<h4 class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12" id="segment-flag-bend">Bend</h4>
 			<p class="mt-4">
-				Used to display a bend segment mesh where a <Link classes="" href="/asset/network/node-flag-bend" text="Bend node" theme="internallink" /> is.
+				Used to display a bend segment mesh where a <Link classes="" href="/asset/network/#node-flag-bend" text="Bend node" theme="internallink" /> is.
 			</p>
 			<h4 class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12" id="segment-flag-waitingpath">WaitingPath</h4>
 			<p class="mt-4">
@@ -515,7 +515,7 @@ import TableOfContents from '../../components/TableOfContents.astro';
 			<p class="mt-4">
 				Used to display an asymmetric segment mesh where an <Link
 					classes=""
-					href="/asset/network/node-flag-asymforward"
+					href="/asset/network/#node-flag-asymforward"
 					text="AsymForward node"
 					theme="internallink"
 				/> is.
@@ -524,7 +524,7 @@ import TableOfContents from '../../components/TableOfContents.astro';
 			<p class="mt-4">
 				Used to display an asymmetric segment mesh where an <Link
 					classes=""
-					href="/asset/network/node-flag-asymbackward"
+					href="/asset/network/#node-flag-asymbackward"
 					text="AsymBackward node"
 					theme="internallink"
 				/> is.
@@ -721,7 +721,7 @@ import TableOfContents from '../../components/TableOfContents.astro';
 			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="adaptive-roads">Adaptive Roads</h2>
 			<p class="mt-4">
 				<Link classes="" href="https://steamcommunity.com/sharedfiles/filedetails/?id=2414618415" text="Adaptive Roads by kian.zarrin" theme="externallink" />
-				is a mod which extends the capabilities and UI of the network editor
+				 is a mod which extends the capabilities and UI of the network editor
 			</p>
 		</div>
 	</section>
