--- a/src/pages/asset/prop.astro
+++ b/src/pages/asset/prop.astro
@@ -245,7 +245,7 @@ import TableOfContents from '../../components/TableOfContents.astro';
 					<p>Allows for diffuse contribution illumination. Black means no illumination and white means the brightest possible illumination.</p><p class="mt-4">
 						<Link
 							classes=""
-							href="/asset/prop/m_illuminationblinktype"
+							href="/asset/prop/#m_illuminationblinktype"
 							text="There are parameters for blinking illumination or disabling illumination during the day."
 							theme="internallink"
 						/>
