--- a/src/pages/asset/vehicle.astro
+++ b/src/pages/asset/vehicle.astro
@@ -635,7 +635,7 @@ import TableOfContents from '../../components/TableOfContents.astro';
 			<p class="mt-4">
 				See more advanced speed and suspension related properties in <Link
 					classes=""
-					href="/modtools/vehicle"
+					href="/modtools/#vehicle"
 					text="the ModTools article"
 					theme="internallink"
 				/>.
