--- a/src/pages/dump.astro
+++ b/src/pages/dump.astro
@@ -41,7 +41,7 @@ import TableOfContents from '../components/TableOfContents.astro';
 			<p class="mt-4">
 				To find prefabs when you can't click on them ingame or in the menu, <Link
 					classes=""
-					href="/modtools/prefabs"
+					href="/modtools/#prefabs"
 					text="see how to find any vanilla or custom prefab in the ModTools article"
 					theme="internallink"
 				/>.
@@ -65,7 +65,7 @@ import TableOfContents from '../components/TableOfContents.astro';
 			</h2>
 			<p class="mt-4">
 				<Link classes="" href="https://7daystodie.com/forums/showthread.php?22675-Unity-Assets-Bundle-Extractor" text="UABE is a tool" theme="externallink" />
-				 which can open .assets files which are located in the Cities_Data folder which is in the game folder. Most vanilla assets can be found in the
+				which can open .assets files which are located in the Cities_Data folder which is in the game folder. Most vanilla assets can be found in the
 				sharedassets11 file, although assets from DLCs can be found in files with a higher number. It can export meshes as OBJ and textures as PNG.
 			</p>
 			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="utinyripper">uTinyRipper</h2>
