--- a/src/pages/modtools.astro
+++ b/src/pages/modtools.astro
@@ -121,7 +121,7 @@ import TableOfContents from '../components/TableOfContents.astro';
 			<p class="mt-4">
 				Controls how the building is plopped, <Link
 					classes=""
-					href="/asset/building/placement-mode"
+					href="/asset/building/#placement-mode"
 					text="read more in the building article"
 					theme="internallink"
 				/>.
