--- a/src/pages/decruft.astro
+++ b/src/pages/decruft.astro
@@ -1,8 +1,9 @@
 ---
 import MainLayout from '../layouts/MainLayout.astro';
+const title = 'Output Log Decrufter - Cities Skylines Modding';
 ---
 
-<MainLayout>
+<MainLayout title={title}>
 	<section class="py-12 sm:ml-64 text-lg text-hit-gray-500">
 		<div class="content">
 			<h2 class="border-b-2 border-hit-gray-600 xl:mt-12 pb-8 text-4xl font-medium text-hit-gray-400" id="decruft">Output Log Decrufter</h2>
