--- a/src/pages/scale.astro
+++ b/src/pages/scale.astro
@@ -2,10 +2,9 @@
 import MainLayout from '../layouts/MainLayout.astro';
 import TableOfContents from '../components/TableOfContents.astro';
 const title = 'Scale - Cities Skylines Modding';
-const description = 'Detailed scale measurements for Cities Skylines Modding.';
 ---
 
-<MainLayout title={title} description={description}>
+<MainLayout title={title}>
 	<TableOfContents />
 	<section class="py-12 sm:ml-64 xl:mr-64 text-lg text-hit-gray-500">
 		<h1 id="overview" class="border-b-4 border-hit-gray-600 pb-8 text-4xl font-bold text-hit-gray-400">Scale</h1>
