--- a/src/pages/shader/proprotating.astro
+++ b/src/pages/shader/proprotating.astro
@@ -2,12 +2,13 @@
 import MainLayout from '../../layouts/MainLayout.astro';
 import Link from '../../components/Link.astro';
 import TableOfContents from '../../components/TableOfContents.astro';
+const title = 'Prop Rotating Shader - Cities Skylines Modding';
 ---
 
-<MainLayout>
+<MainLayout title={title}>
 	<TableOfContents />
 	<section class="py-12 sm:ml-64 xl:mr-64 text-lg text-hit-gray-500">
-		<h1 id="overview" class="border-b-4 border-hit-gray-600 pb-8 text-4xl font-bold text-hit-gray-400">PropRotating Shader</h1>
+		<h1 id="overview" class="border-b-4 border-hit-gray-600 pb-8 text-4xl font-bold text-hit-gray-400">Prop Rotating Shader</h1>
 		<div class="content">
 			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="about">About</h2>
 			<p class="mt-4">The PropRotating shader can be used to create props which have rotating parts or clocks.</p>
