--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,9 +2,10 @@
 import MainLayout from '../layouts/MainLayout.astro';
 import Link from '../components/Link.astro';
 import TableOfContents from '../components/TableOfContents.astro';
+const title = 'About - Cities Skylines Modding';
 ---
 
-<MainLayout>
+<MainLayout title={title}>
 	<TableOfContents />
 	<section class="py-12 sm:ml-64 xl:mr-64 text-lg text-hit-gray-500">
 		<div class="content">
