--- a/src/pages/asset/building.astro
+++ b/src/pages/asset/building.astro
@@ -2,10 +2,10 @@
 import MainLayout from '../../layouts/MainLayout.astro';
 import Link from '../../components/Link.astro';
 import TableOfContents from '../../components/TableOfContents.astro';
+const title = 'Building Asset Creation - Cities Skylines Modding';
 ---
 
-<!-- TODO: Add relevant videos in TOC -->
-<MainLayout>
+<MainLayout title={title}>
 	<TableOfContents />
 	<section class="py-12 sm:ml-64 xl:mr-64">
 		<h1 id="overview" class="border-b-4 border-hit-gray-600 pb-8 text-4xl font-bold text-hit-gray-400">Building Asset Creation</h1>
