--- a/src/pages/scripting.astro
+++ b/src/pages/scripting.astro
@@ -2,11 +2,12 @@
 import MainLayout from '../layouts/MainLayout.astro';
 import Link from '../components/Link.astro';
 import TableOfContents from '../components/TableOfContents.astro';
+const title = 'Writing Scripts - Cities Skylines Modding';
 ---
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/vs2015.min.css" />
 
-<MainLayout>
+<MainLayout title={title}>
 	<TableOfContents />
 	<section class="py-12 sm:ml-64 xl:mr-64 text-lg text-hit-gray-500">
 		<h1 id="overview" class="border-b-4 border-hit-gray-600 pb-8 text-4xl font-bold text-hit-gray-400">Writing Scripts</h1>
