--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -23,6 +23,20 @@
 		border-radius: 20px;
 	}
 
+	:root {
+		--pagefind-ui-scale: 1;
+		--pagefind-ui-primary: #034ad8;
+		--pagefind-ui-text: #a8b6bf;
+		--pagefind-ui-background: #ffffff;
+		--pagefind-ui-border: #eeeeee;
+		--pagefind-ui-tag: #eeeeee;
+		--pagefind-ui-border-width: 2px;
+		--pagefind-ui-border-radius: 8px;
+		--pagefind-ui-image-border-radius: 8px;
+		--pagefind-ui-image-box-ratio: 3 / 2;
+		--pagefind-ui-font: sans-serif;
+	}
+
 	@font-face {
 		font-family: 'Open Sans';
 		font-style: normal;
